--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     transition: 0.5s;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: 2px solid rgba(0,0,0, 0.25);
+    /* border: 2px solid rgba(0,0,0, 0.25); */
 }
 
 .header {
@@ -10,17 +10,19 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    border: 5px solid black;
-    background-color: black;
+    border: 5px solid grey;
+    background-color: var(--radio-color);
+    color: grey;
+    text-align: center;
 }
 
 #search-bar{
     margin: auto;
     display: grid;
-    border: 4px solid black;
+    border: 4px solid grey;
     text-align: center;
-    height: 40%;
-    width: 60%;
+    height: 30%;
+    width: 50%;
     font-size: 25px;
 }
 
@@ -39,11 +41,11 @@
 }
 
 .display-movies {
-    width: fit-content;
+    /* width: fit-content; */
     /* block-size: fit-content; */
     margin: auto;
     display: flex;
-    border : 5px solid black;
+    border : 5px solid grey;
     flex-direction:row;
     width: 70%;
     justify-content: space-evenly;
@@ -62,37 +64,54 @@ input[type = "radio"] {
 input[type = "radio"]:checked {
     /* appearance: none;x */
     background-color: var(--radio-color);
+    color: var(--radio-color);
 }
 
-#babyPink{
-    --radio-color:rgb(242,172,185);
+#blue{
+    --radio-color:#49E2F3;
+    --text-color:#e0e0e0;
 }
 
-#blue {
-    --radio-color: rgb(19,64,179);
+#babyPink {
+    --radio-color: #D773E6;
 }
 
 #orange {
-    --radio-color:rgb(227,110,19);
+    --radio-color:#73D576;
 }
 #dark {
     --radio-color:rgb(32,42,68);
 }
 #light {
-    --radio-color: rgb(205,183,187);
+    --radio-color: #FF9999;
+    --text-color: white;
 }
-:root:has(#blue:checked){
-    background-color: blue;
+:root:has(#babyPink:checked){
+    background-color: #D773E6;
 }
 :root:has(#light:checked) {
-    background-color: lightcyan;
+    background-color: #FF9999;
 }
 :root:has(#orange:checked) {
-    background-color: orange;
+    background-color: #73D576;
 }
-:root:has(#babyPink:checked) {
-    background-color: pink;
+:root:has(#blue:checked) {
+    background-color: #49E2F3;
 }
 :root:has(#dark:checked) {
     background-color: black;
+    color:var(--text-color);
+}
+
+.color-changer {
+    background-color: white;
+    border: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.form-control {
+    border: none;
+    width: fit-content;
+    margin: auto;
 }
